# jni-rs

./: Cargo.toml  build.rs
src/: lib.rs  sys.rs
src/wrapper/: errors.rs  jnienv.rs  macros.rs  version.rs
src/wrapper/descriptors/: desc.rs
src/wrapper/java_vm/: vm.rs
