[package]
authors = ["Josh Chase <josh@prevoty.com>"]
description = "Rust bindings to the JNI"
license = "MIT/Apache-2.0"
name = "jni-dynamic"
repository = "https://github.com/Radviger/jni-dynamic-rs"
version = "0.12.0"

[dependencies]
cesu8 = "1.1.0"
combine = "3.4.1"
jni-sys-dynamic = { git = "https://github.com/Radviger/jni-sys-dynamic-rs" }
log = "0.4.4"

[build-dependencies]
walkdir = "2"

[dependencies.error-chain]
default-features = false
version = "0.12.0"

[dev-dependencies]
lazy_static = "1"


[features]
invocation = []
backtrace = ["error-chain/backtrace"]
default = ["backtrace"]
